Создает препроцессорные файлы хедер и хиро

--- a/source/less/base/base.less
+++ b/source/less/base/base.less
@@ -1,6 +1,5 @@
-img {
-  max-width:100%;
-  height: auto;
+.page {
+  height: 100%;
 }
 
 *,
@@ -8,3 +7,20 @@ img {
 *::after {
   box-sizing: border-box;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
+
