--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,11 @@
 // Начните писать стили здесь
-@import './base/fonts.less';
-@import './base/base.less';
-@import './base/blocks/header';
+@import "./variables.less";
+@import "./base/fonts.less";
+@import "./base/base.less";
+@import "./base/mixin.less";
+@import "./base/blocks/page.less";
+@import "./base/blocks/header.less";
+@import "./base/blocks/main-nav.less";
+@import "./base/blocks/nav-list.less";
+@import "./base/blocks/hero.less";
+@import "./base/blocks/button.less";
