Стилизует препроцессорами програм

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,6 @@
 @import "./base/blocks/nav-list.less";
 @import "./base/blocks/hero.less";
 @import "./base/blocks/button.less";
+@import "./base/blocks/programs.less";
+@import "./base/blocks/program-card.less";
+@import "./base/blocks/card-descr.less";
