делает на препроцессорах main

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,9 @@
 @import "./base/blocks/programs.less";
 @import "./base/blocks/program-card.less";
 @import "./base/blocks/card-descr.less";
+@import "./base/blocks/second-title.less";
+@import "./base/blocks/it-works.less";
+@import "./base/blocks/example.less";
+@import "./base/blocks/slider.less";
+@import "./base/blocks/invite.less";
+
