делает mobile first на препроцессорах

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -17,4 +17,6 @@
 @import "./base/blocks/example.less";
 @import "./base/blocks/slider.less";
 @import "./base/blocks/invite.less";
+@import "./base/blocks/footer.less";
+@import "./base/blocks/social.less";
 
