--- a/source/less/base/blocks/hero.less
+++ b/source/less/base/blocks/hero.less
@@ -3,18 +3,20 @@
 }
 
 .hero__wrapper-top {
-  height: 302px;
-  background-image: url("../img/hero-background.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
+
+  padding-bottom: 138px;
 }
 
 .hero__container {
-  background-color: fade(#68b738, 85%);
+  background-color: #62a53a;
+  background-image: url("../img/hero-background.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: auto 100%;
   height: 100%;
   padding-top: 27px;
- }
+  padding-bottom: 164px;
+}
 
 .hero__title {
   .font-basic();
@@ -24,19 +26,8 @@
   line-height: 36px;
   margin: 0 auto;
   margin-bottom: 25px;
-  position: relative;
-   &::before {
-   content: "";
-   position: absolute;
-   width: 280px;
-   height: 270px;
-   background-image: url("../img/product-view.png");
-   background-repeat: no-repeat;
-   background-position: center center;
-   top: 140px;
-   left: -15px;
- }
 }
+
 
 .hero__descr {
   .font-basic();
@@ -46,15 +37,23 @@
   line-height: 14px;
   text-transform: uppercase;
   width: 200px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 280px;
+    height: 270px;
+    background-image: url("../img/product-view.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    bottom: -300px;
+    left: -50px;
+  }
 }
 
-.hero__wrapper-bottom {
-  height: 178px;
-  min-width: 320px;
-  padding: 0 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+.hero__button {
+  margin: 0 20px;
 }
 
 
