--- a/source/less/base/blocks/header.less
+++ b/source/less/base/blocks/header.less
@@ -1,19 +1,18 @@
 .main-header {
   position: relative;
   min-width: 320px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .main-header__logo {
-  position: relative;
-  height: 66px;
-  border-bottom: 1px solid #e6e6e6;
-  background-image: url("../img/logo-subscribe.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-.main-header__link {
   position: absolute;
-  top: 20%;
+  top: 10px;
   left: 20px;
 }
+
+
