--- a/source/less/base/blocks/hero.less
+++ b/source/less/base/blocks/hero.less
@@ -48,7 +48,9 @@
     background-repeat: no-repeat;
     background-position: center center;
     bottom: -300px;
-    left: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+
   }
 }
 
