--- a/source/less/base/blocks/it-works.less
+++ b/source/less/base/blocks/it-works.less
@@ -1,11 +1,11 @@
 .it-works {
-  padding-top: 20px;
-  padding-bottom: 29px;
-  min-width: 320px;
+  padding: 20px 20px 29px 20px;
 }
 
 .it-works__wrapper {
-  width: 280px;
+  min-width: 280px;
+  max-width: 600px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -18,19 +18,24 @@
 }
 
 .it-works__item {
+  min-height: 60px;
   margin-bottom: 20px;
   padding-left: 80px;
   position: relative;
-  &::before {
+  display: flex;
+  align-items: center;
+
+   &::before {
     content: "";
     position: absolute;
+    display: inline-block;
     width: 60px;
     height: 60px;
     background-color: #68b738;
-    top: 0;
-    left: 0;
     background-repeat: no-repeat;
     background-position: center center;
+    top: 0;
+    left: 0;
   }
 }
 
@@ -57,7 +62,6 @@
   background-image: url(../img/time.svg);
   }
 }
-
 
 
 
