--- a/source/less/base/blocks/programs.less
+++ b/source/less/base/blocks/programs.less
@@ -1,5 +1,6 @@
 .programs {
   min-width: 320px;
+  padding: 0 20px;
 }
 
 .programs__list {
@@ -11,6 +12,7 @@
   margin: 0 auto;
   margin-bottom: 20px;
 }
+
 
 
 
