делает адаптивные сетки главной страницы для планшета

--- a/source/less/base/blocks/footer.less
+++ b/source/less/base/blocks/footer.less
@@ -1,12 +1,24 @@
 .main-footer__wrapper {
   margin: 0 20px;
-  padding: 40px 0;;
+  padding: 40px 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
+
 
 .main-footer__logo {
   text-align: center;
   padding-bottom: 20px;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+    padding-bottom: 0;
+  }
 }
 
 .main-footer__container {
@@ -14,10 +26,21 @@
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .main-footer__copyright {
   display: flex;
   justify-content: space-between;
   padding: 20px 0 40px 0;
+
+
+  @media(min-width: @tablet-width) {
+    width: 168px;
+    padding: 0;
+    align-items: center;
+  }
 }
