--- a/source/less/base/blocks/main-nav.less
+++ b/source/less/base/blocks/main-nav.less
@@ -17,6 +17,7 @@
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: flex-end;
-    max-width: 70%;
+    max-width: 60%;
+    min-width: 768px;
   }
 }
