--- a/source/less/base/blocks/slider.less
+++ b/source/less/base/blocks/slider.less
@@ -3,6 +3,11 @@
   height: 256px;
   overflow: hidden;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    width: 560px;
+    height: 512px;
+  }
 }
 
 .slider__list {
@@ -12,6 +17,11 @@
 
 .slider__item {
   min-width: 280px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 560px;
+    min-height: 512px;
+  }
 }
 
 .slider__image {
