--- a/source/less/base/blocks/button.less
+++ b/source/less/base/blocks/button.less
@@ -9,4 +9,12 @@
   line-height: 18px;
   text-align: center;
   text-decoration: none;
+
+  @media(min-width: @tablet-width) {
+   padding: 14px 26px;
+   font-size: 20px;
+   line-height: 20px;
+  }
 }
+
+
