--- a/source/less/base/blocks/card-descr.less
+++ b/source/less/base/blocks/card-descr.less
@@ -4,4 +4,9 @@
   line-height: 18px;
   color: #444444;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
