--- a/source/less/base/blocks/example.less
+++ b/source/less/base/blocks/example.less
@@ -1,21 +1,54 @@
 .example {
   background-color: @color-medium;
   padding: 25px 20px 40px 20px;
+
+
+  @media (min-width: @tablet-width) {
+    background-color: @color-light;
+    padding: 43px 0 101px 0;
+    position: relative;
+  }
+
+  &::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      width: 100%;
+      height: 462px;
+      position: absolute;
+      bottom: 0;
+      background-color: @color-medium;
+    }
+  }
 }
 
 .example__wrapper {
   min-width: 280px;
   max-width: 600px;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    max-width: 1100px;
+    padding: 0 30px;
+    margin: 0;
+  }
 }
 
 .example__title {
   margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 63px;
+  }
 }
 
 .example__container {
   display: grid;
   grid-gap: 20px;
+
+  @media(min-width: @tablet-width) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 54px 165px;
+  }
 }
 
 .example__list {
@@ -35,6 +68,12 @@
   padding: 20px;
   border: 1px solid #cdcdcd;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+    min-width: 162px;
+  }
 }
 
 .example__descr {
@@ -46,12 +85,21 @@
   justify-self: center;
   margin-top: -20px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 14px;
+    line-height: 14px;
+  }
 }
 
 .example__line {
   background-color: @color-medium;
   display: inline-block;
   max-width: 90%;
+
+  @media (min-width: @tablet-width) {
+    background-color: @color-light;
+  }
 }
 
 .example__span {
@@ -61,9 +109,27 @@
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    justify-self: end;
+    max-width: 180px;
+    text-align: end;
+    font-size: 20px;
+  }
+
 }
 
 .example__contain {
   justify-self: center;
+
+  @media (min-width: @tablet-width) {
+    grid-column: 1/-1;
+    padding-bottom: 45px;
+  }
 }
 
+.example__explane {
+  @media (min-width: @tablet-width) {
+    grid-column: 1/-1;
+  }
+}
