--- a/source/less/base/blocks/hero.less
+++ b/source/less/base/blocks/hero.less
@@ -1,13 +1,41 @@
 .hero {
   min-width: 320px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 526px;
+  }
 }
 
 .hero__wrapper-top {
-
   padding-bottom: 138px;
-}
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 0;
+    position: relative;
+  }
+  &::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      width: 709px;
+      height: 609px;
+      background-image: url("../img/product-view.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+      bottom: -580px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+  }
 
 .hero__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #62a53a;
   background-image: url("../img/hero-background.jpg");
   background-repeat: no-repeat;
@@ -16,6 +44,13 @@
   height: 100%;
   padding-top: 27px;
   padding-bottom: 164px;
+
+  @media (min-width: @tablet-width) {
+    background: @color-light;
+    align-items: flex-start;
+    padding-bottom: 49px;
+    padding-left: 118px;
+  }
 }
 
 .hero__title {
@@ -24,14 +59,24 @@
   color: @color-light;
   font-size: 36px;
   line-height: 36px;
-  margin: 0 auto;
+  margin: 0;
+  text-align: center;
   margin-bottom: 25px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    color: #000000;
+    width: 420px;
+    text-align: left;
+    margin-bottom: 41px;
+  }
 }
 
 
 .hero__descr {
   .font-basic();
-  margin: 0 auto;
+  margin: 0;
   color: @color-light;
   font-size: 14px;
   line-height: 14px;
@@ -50,12 +95,30 @@
     bottom: -300px;
     left: 50%;
     transform: translateX(-50%);
+  }
 
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    color: #000000;
+    width: 290px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      display: none;
+    }
   }
 }
 
 .hero__button {
   margin: 0 20px;
+ @media (min-width: @tablet-width) {
+  margin: 0;
+  align-self: flex-start;
+  margin-left: 118px;
+  z-index: 2;
+}
 }
 
 
