--- a/source/less/base/blocks/program-card.less
+++ b/source/less/base/blocks/program-card.less
@@ -5,7 +5,12 @@
   padding: 21px 20px 0 20px;
   position: relative;
 
-    &::after {
+  @media (min-width: @tablet-width) {
+    max-width: 1100px;
+    padding: 77px 0 53px 53px;
+  }
+
+  &::after {
     content: "";
     position: absolute;
     width: 70px;
@@ -13,23 +18,47 @@
     top: 10px;
     left: 0;
   }
+
+  &::after {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      width: 270px;
+      height: 215px;
+      left: 70%;
+      top: 20px;
+    }
+  }
 }
+
 
 .program-card--cat_sit {
   &::after {
-  background-image: url("../img/cat-sit.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
+    background-image: url("../img/cat-sit.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  &::after {@media (min-width: @tablet-width) {
+      background-size: contain;
+    }
   }
 }
 
 .program-card--cat_go {
   &::after {
-   background-image: url("../img/cat-go.svg");
-   background-repeat: no-repeat;
-   background-position: center center;
+    background-image: url("../img/cat-go.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  &::after {
+    @media (min-width: @tablet-width) {
+      background-size: contain;
+    }
   }
 }
+
 
 .program-card__title {
   .font-basic();
@@ -40,12 +69,27 @@
   color: #000000;
   text-transform: uppercase;
   padding-left: 91px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 24px;
+    font-size: 36px;
+    line-height: 36px;
+    padding-left: 0;
+    max-width: 60%;
+  }
 }
 
 .program-card__descr {
   width: 100%;
   padding-bottom: 23px;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    max-width: 50%;
+    margin-bottom: 48px;
+    border: none;
+    color: #000000;
+  }
 }
 
 .program-card__link {
@@ -58,4 +102,9 @@
   text-decoration: none;
   color: #000000;
 
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    font-size: 24px;
+    line-height: 30px;
+  }
 }
