--- a/source/less/base/blocks/second-title.less
+++ b/source/less/base/blocks/second-title.less
@@ -4,4 +4,9 @@
   line-height: 40px;
   color: #000000;
   margin: 0;
+
+  @media(min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
