адаптирует декоративные элементы

--- a/source/less/base/blocks/button.less
+++ b/source/less/base/blocks/button.less
@@ -1,6 +1,6 @@
 .button {
   display: block;
-  padding: 7px 0;
+  padding: 10px 0;
   background-color: #68b738;
   color: @color-light;
   .font-basic();
@@ -9,11 +9,13 @@
   line-height: 18px;
   text-align: center;
   text-decoration: none;
+  border: none;
+  cursor: pointer;
 
-  @media(min-width: @tablet-width) {
-   padding: 14px 26px;
-   font-size: 20px;
-   line-height: 20px;
+  @media (min-width: @tablet-width) {
+    padding: 14px 26px;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 
