--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,4 +19,18 @@
 @import "./base/blocks/invite.less";
 @import "./base/blocks/footer.less";
 @import "./base/blocks/social.less";
+@import "./elements/inner-title.less";
+@import "./elements/inner-text.less";
+@import "./elements/form-page.less";
+@import "./elements/text-input.less";
+@import "./elements/form.less";
+@import "./elements/group-name.less";
+@import "./elements/radio.less";
+@import "./elements/group-program.less";
+@import "./elements/special-title.less";
+@import "./elements/group-contact.less";
+@import "./elements/group-comment.less";
+@import "./elements/text-area.less";
+@import "./elements/group-add.less";
+@import "./elements/checkbox.less";
 
