--- a/source/less/base/blocks/example.less
+++ b/source/less/base/blocks/example.less
@@ -18,6 +18,10 @@
       bottom: 0;
       background-color: @color-medium;
     }
+
+    @media (min-width: @desktop-width) {
+      background-color: transparent;
+    }
   }
 }
 
@@ -30,6 +34,10 @@
     max-width: 1100px;
     padding: 0 30px;
     margin: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 1440px;
   }
 }
 
@@ -45,7 +53,7 @@
   display: grid;
   grid-gap: 20px;
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     grid-template-columns: repeat(2, 1fr);
     gap: 54px 165px;
   }
@@ -55,7 +63,11 @@
   margin: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 8px 20px;
+  gap: 11px 30px;
+
+  @media (min-width: @desktop-width) {
+   grid-column: 1/2;
+  }
 }
 
 .example__term {
@@ -65,7 +77,7 @@
   line-height: 24px;
   color: #000000;
   grid-row: 1/2;
-  padding: 20px;
+  padding: 16px;
   border: 1px solid #cdcdcd;
   text-align: center;
 
@@ -117,6 +129,24 @@
     font-size: 20px;
   }
 
+  @media (min-width: @desktop-width) {
+   grid-column: 1/2;
+   max-width: 100%;
+   }
+}
+
+.example__div {
+  justify-self: center;
+
+  @media (min-width: @tablet-width) {
+display: flex;
+flex-direction: column;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    grid-column: 1/2;
+  }
 }
 
 .example__contain {
@@ -124,12 +154,20 @@
 
   @media (min-width: @tablet-width) {
     grid-column: 1/-1;
-    padding-bottom: 45px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column: 2/3;
+   margin-top: -400px;
   }
 }
 
 .example__explane {
   @media (min-width: @tablet-width) {
     grid-column: 1/-1;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column: 1/2;
   }
 }
