--- a/source/less/base/blocks/footer.less
+++ b/source/less/base/blocks/footer.less
@@ -1,5 +1,6 @@
 .main-footer__wrapper {
-  margin: 0 20px;
+  margin-left: 20px;
+  margin-right: 16px;
   padding: 40px 0;
 
   @media (min-width: @tablet-width) {
@@ -12,7 +13,7 @@
 
 .main-footer__logo {
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
@@ -22,7 +23,8 @@
 }
 
 .main-footer__container {
-  padding: 20px 0;
+  padding: 21px 0;
+  padding-bottom: 15px;
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #d9d9d9;
@@ -44,3 +46,8 @@
     align-items: center;
   }
 }
+
+.main-footer__copyright-descr {
+  align-self: center;
+}
+
