--- a/source/less/base/blocks/header.less
+++ b/source/less/base/blocks/header.less
@@ -6,13 +6,33 @@
     padding: 0 30px;
     display: flex;
     justify-content: flex-end;
+    z-index: 10;
   }
+
+  @media (min-width: @desktop-width) {
+    min-width: @desktop-width;
+    max-width: 1350px;
+    margin: 0 auto;
+    padding: 0 110px;
+  }
+}
+
+.main-header__icon {
+  padding-top: 23px;
+  padding-bottom: 24px;
+  display: flex;
+  justify-content: center;
 }
 
 .main-header__logo {
   position: absolute;
   top: 10px;
   left: 20px;
+
+@media (min-width: @desktop-width) {
+  top: 20px;
+  left: 110px;
+ }
 }
 
 
