--- a/source/less/base/blocks/it-works.less
+++ b/source/less/base/blocks/it-works.less
@@ -5,17 +5,27 @@
     padding: 45px 31px 47px 31px;
     border-bottom: 1px solid #e6e6e6;
   }
+
+  @media(min-width: @desktop-width) {
+    padding: 71px 0 69px 0;
+    border: none;
+  }
 }
 
 .it-works__wrapper {
   min-width: 280px;
-  max-width: 600px;
+  max-width: 768px;
   width: 100%;
   margin: 0 auto;
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     min-width: 768px;
     max-width: 1100px;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: @desktop-width;
+    max-width: 1350px;
   }
 }
 
@@ -30,9 +40,13 @@
 .it-works__list {
   .list-reset();
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
   }
 }
 
@@ -44,7 +58,7 @@
   display: flex;
   align-items: center;
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     width: 250px;
     padding: 151px 26px 57px 0;
     display: block;
@@ -62,9 +76,13 @@
     top: 0;
     left: 0;
 
-    @media(min-width: @tablet-width) {
+    @media (min-width: @tablet-width) {
       width: 80px;
       height: 80px;
+      top: 40px;
+    }
+
+    @media (min-width: @desktop-width) {
       top: 40px;
     }
   }
@@ -83,9 +101,24 @@
       right: 0;
       z-index: -1;
     }
+
+    @media(min-width: @desktop-width) {
+      top: 0;
+    }
   }
 }
 
+.it-works__item:not(:last-child) {
+  @media (min-width: @desktop-width) {
+    margin-right: 77px;
+  }
+}
+
+.it-works__item:last-child {
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
+  }
+}
 
 .it-works__item--leave {
   &::before {
@@ -134,6 +167,3 @@
     }
   }
 }
-
-
-
