--- a/source/less/base/blocks/main-nav.less
+++ b/source/less/base/blocks/main-nav.less
@@ -2,16 +2,30 @@
   display: inline-block;
   position: absolute;
   border: none;
-  top: 11%;
+  top: 28%;
+  right: 20px;
+  width: 25px;
+  height: 20px;
+  background: url("../img/mobile-closed.svg") no-repeat center center;
+  cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 8%;
   right: 20px;
   width: 25px;
   height: 20px;
   background: url("../img/nav-button-mobile.svg") no-repeat center center;
+  cursor: pointer;
 
-@media (min-width: @tablet-width) {
-  display: none;
- }
 }
+
 
 .main-nav {
   @media (min-width: @tablet-width) {
@@ -20,4 +34,11 @@
     max-width: 60%;
     min-width: 768px;
   }
+  @media (min-width: @desktop-width) {
+    max-width: 50%;
+    min-width: @desktop-width;
+  }
 }
+
+
+
