--- a/source/less/base/blocks/slider.less
+++ b/source/less/base/blocks/slider.less
@@ -1,8 +1,6 @@
 .slider {
   width: 280px;
   height: 256px;
-  overflow: hidden;
-  position: relative;
 
   @media (min-width: @tablet-width) {
     width: 560px;
@@ -12,27 +10,74 @@
 
 .slider__list {
   .list-reset();
-  display: flex;
+  position: relative;
 }
 
 .slider__item {
-  min-width: 280px;
+  width: 280px;
+  height: 256px;
+  position: absolute;
 
   @media (min-width: @tablet-width) {
-    min-width: 560px;
-    min-height: 512px;
+    width: 560px;
+    height: 512px;
+  }
+}
+
+.slider__item--fat {
+  overflow: hidden;
+  width: 50%;
+  background-color: @color-medium;
+  z-index: 5;
+  border-right: 5px solid #666666;
+  transition: all 30ms;
+
+
+  &::before {
+  @media (min-width: @tablet-width) {
+      content: "";
+      width: 100%;
+      height: 151px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: @color-light;
+      z-index: -1;
+    }
   }
 }
 
 .slider__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 280px;
+  max-width: 280px;
+  min-height: 256px;
+  @media (min-width: @tablet-width) {
+    width: 560px;
+    max-width: 560px;
+    min-height: 512px;
+    object-fit: cover;
+  }
 }
 
 .slider__curtain {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  right: -9%;
+  z-index: 10;
 }
+
+.slider__button {
+  display: block;
+  border: none;
+  background-color: transparent;
+ }
+
+.slider__icon path {
+  fill: #666666;
+}
+
+.slider__icon rect {
+  stroke: #666666;
+}
+
 
