--- a/source/less/base/blocks/program-card.less
+++ b/source/less/base/blocks/program-card.less
@@ -4,14 +4,11 @@
   position: relative;
 
   @media (min-width: @tablet-width) {
-    max-width: 1100px;
     padding: 77px 0 53px 53px;
   }
 
   @media (min-width: @desktop-width) {
-    min-width: 570px;
     padding: 77px 61px 55px 52px;
-    max-width: calc((1350px - 80px) / 2);
   }
 
   &::after {
@@ -21,9 +18,7 @@
     height: 55px;
     top: 19px;
     left: 11px;
-  }
 
-  &::after {
     @media (min-width: @tablet-width) {
       content: "";
       position: absolute;
@@ -42,7 +37,6 @@
       top: 20px;
       left: 0;
     }
-
   }
 }
 
@@ -90,11 +84,11 @@
     font-size: 36px;
     line-height: 36px;
     padding-left: 0;
-    max-width: 60%;
   }
+
   @media (min-width: @desktop-width) {
-   margin-left: 160px;
-   margin-bottom: 73px;
+    margin-left: 160px;
+    margin-bottom: 73px;
   }
 
 }
@@ -105,13 +99,14 @@
   max-width: 500px;
 
   @media (min-width: @tablet-width) {
-    max-width: 50%;
+    width: 50%;
     margin-bottom: 48px;
     border: none;
     color: #000000;
   }
+
   @media (min-width: @desktop-width) {
-    max-width: 90%;
+    width: 100%;
   }
 }
 
@@ -129,10 +124,17 @@
   background-repeat: no-repeat;
   background-position: 100px center;
 
+
   @media (min-width: @tablet-width) {
     padding: 0;
     font-size: 24px;
     line-height: 30px;
     border: none;
+    width: 165px;
+    background-position: right center;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 168px;
   }
 }
