--- a/source/less/base/blocks/programs.less
+++ b/source/less/base/blocks/programs.less
@@ -16,7 +16,6 @@
   padding: 20px;
   padding-bottom: 0;
   width: 100%;
-  max-width: 768px;
   margin: 0 auto;
 
 
@@ -26,9 +25,9 @@
 
   @media (min-width: @desktop-width) {
     display: flex;
-    padding-top: 82px;
-    padding-bottom: 71px;
-    justify-content: center;
+    padding: 82px 0 71px 0;
+    width: 1220px;
+    margin: 0 auto;
   }
 }
 
