--- a/source/less/base/blocks/slider.less
+++ b/source/less/base/blocks/slider.less
@@ -44,6 +44,10 @@
       background-color: @color-light;
       z-index: -1;
     }
+
+    @media (min-width: @desktop-width) {
+      height: 18.5%;
+    }
   }
 }
 
