--- a/source/less/elements/group-comment.less
+++ b/source/less/elements/group-comment.less
@@ -17,6 +17,10 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 76px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 73px;
+  }
 }
 
 .group-comment__container {
@@ -28,7 +32,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 110px;
+    margin: 0 auto;
+    width: 1220px;
   }
 }
 
