--- a/source/less/elements/group-contact.less
+++ b/source/less/elements/group-contact.less
@@ -11,10 +11,9 @@
   margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 76px;
+    margin-bottom: 72px;
   }
 }
-
 
 .group-contact__list {
   margin: 0 20px;
@@ -25,7 +24,8 @@
 
   @media (min-width: @desktop-width) {
     display: flex;
-    margin: 0 103px;
+    width: 1220px;
+    margin: 0 auto;
   }
 }
 
@@ -40,6 +40,7 @@
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
     margin-right: 78px;
+    gap: 20px;
   }
 }
 
@@ -52,5 +53,5 @@
 }
 
 .group-contact__input {
-  padding-right: 32px;
+  padding-right: 45px;
 }
