--- a/source/less/elements/group-name.less
+++ b/source/less/elements/group-name.less
@@ -9,13 +9,13 @@
 
   @media (min-width: @desktop-width) {
     padding: 0;
-    margin-left: 111px;
+    width: 570px;
+    justify-self: end;
   }
 }
 
 .group-name__item {
   margin-bottom: 14px;
-  min-width: 282px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 20px;
