--- a/source/less/elements/group-program.less
+++ b/source/less/elements/group-program.less
@@ -1,5 +1,5 @@
 .group-program {
-  padding: 22px 25px 19px 20px;
+  padding: 21px 25px 19px 20px;
   border-bottom: 1px solid #d7d7d7;
 
   @media (min-width: @tablet-width) {
@@ -10,12 +10,18 @@
 
   @media (min-width: @desktop-width) {
     border: 1px solid #d7d7d7;
-    margin-right: 112px;
+    width: 570px;
+    justify-self: start;
+    margin: 0;
   }
 }
 
 .group-program__item {
-  margin-bottom: 13px;
+  margin-bottom: 10px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 13px;
+  }
 }
 
 .group-program__item:last-child {
