--- a/source/less/base/blocks/example.less
+++ b/source/less/base/blocks/example.less
@@ -20,24 +20,27 @@
     }
 
     @media (min-width: @desktop-width) {
-      background-color: transparent;
+      height: 77%;
+      
     }
   }
 }
 
 .example__wrapper {
   min-width: 280px;
-  max-width: 600px;
-  margin: 0 auto;
+
 
   @media (min-width: @tablet-width) {
-    max-width: 1100px;
     padding: 0 30px;
     margin: 0;
   }
 
   @media (min-width: @desktop-width) {
-    max-width: 1440px;
+    padding: 0;
+    width: 1220px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
   }
 }
 
@@ -66,7 +69,7 @@
   gap: 11px 30px;
 
   @media (min-width: @desktop-width) {
-   grid-column: 1/2;
+    grid-column: 1/2;
   }
 }
 
@@ -130,22 +133,23 @@
   }
 
   @media (min-width: @desktop-width) {
-   grid-column: 1/2;
-   max-width: 100%;
-   }
+    grid-column: 1/2;
+    max-width: 100%;
+  }
 }
 
 .example__div {
   justify-self: center;
 
   @media (min-width: @tablet-width) {
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
 
   @media (min-width: @desktop-width) {
     display: block;
     grid-column: 1/2;
+    justify-self: start;
   }
 }
 
@@ -158,7 +162,7 @@ flex-direction: column;
 
   @media (min-width: @desktop-width) {
     grid-column: 2/3;
-   margin-top: -400px;
+    margin-top: -400px;
   }
 }
 
