--- a/source/less/base/blocks/it-works.less
+++ b/source/less/base/blocks/it-works.less
@@ -7,25 +7,23 @@
   }
 
   @media(min-width: @desktop-width) {
-    padding: 71px 0 69px 0;
     border: none;
+    padding: 0;
   }
 }
 
 .it-works__wrapper {
   min-width: 280px;
-  max-width: 768px;
   width: 100%;
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     min-width: 768px;
-    max-width: 1100px;
   }
 
   @media (min-width: @desktop-width) {
-    min-width: @desktop-width;
-    max-width: 1350px;
+    width: 1224px;
+    margin: 0 auto;
   }
 }
 
@@ -46,7 +44,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    display: flex;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -59,7 +57,6 @@
   align-items: center;
 
   @media (min-width: @tablet-width) {
-    width: 250px;
     padding: 151px 26px 57px 0;
     display: block;
   }
