--- a/source/less/base/blocks/main-footer.less
+++ b/source/less/base/blocks/main-footer.less
@@ -8,6 +8,12 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  @media (min-width: @desktop-width) {
+      width: 1220px;
+      margin: 0 auto;
+
+  }
 }
 
 
