--- a/source/less/base/blocks/main-nav.less
+++ b/source/less/base/blocks/main-nav.less
@@ -1,8 +1,24 @@
+.main-nav {
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: flex-end;
+    max-width: 60%;
+    min-width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 50%;
+    min-width: @desktop-width;
+  }
+}
+
 .main-nav__toggle {
   display: inline-block;
   position: absolute;
   border: none;
-  top: 28%;
+  top: -47px;
   right: 20px;
   width: 25px;
   height: 20px;
@@ -23,22 +39,10 @@
   height: 20px;
   background: url("../img/nav-button-mobile.svg") no-repeat center center;
   cursor: pointer;
-
 }
 
-
-.main-nav {
-  @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: flex-end;
-    max-width: 60%;
-    min-width: 768px;
-  }
-  @media (min-width: @desktop-width) {
-    max-width: 50%;
-    min-width: @desktop-width;
+.main-nav--closed .main-nav__list {
+  @media (max-width: @mobile-width-only) {
+    display: none;
   }
 }
-
-
-
