--- a/source/less/elements/form-page.less
+++ b/source/less/elements/form-page.less
@@ -3,10 +3,12 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 54px;
+    margin-top: 44px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 56px;
+    width: 1220px;
+    margin: 45px auto 56px;
   }
 }
 
@@ -15,6 +17,11 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 66px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto 64px;
+    width: 1220px;
   }
 }
 
