--- a/source/less/elements/special-title.less
+++ b/source/less/elements/special-title.less
@@ -9,11 +9,18 @@
   content: "";
   width: 100%;
   position: absolute;
-  top: 16px;
+  top: 24px;
   left: 0;
   z-index: 1;
   height: 1px;
   border-top: 1px solid #68b738;
+}
+
+.special-title__container {
+  width: 1290px;
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+  }
 }
 
 .special-title__text {
@@ -35,7 +42,8 @@
     margin-left: 29px;
   }
 
-  @media (min-width: @desktop-width) {
-    margin-left: 61px;
+  @media (min-width: @desktop-width)  {
+    margin-left: 0;
+    padding-left: 35px;
   }
 }
