--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,33 +4,35 @@
 @import "./base/base.less";
 @import "./base/mixin.less";
 @import "./base/blocks/page.less";
-@import "./base/blocks/header.less";
+@import "./base/blocks/main-header.less";
 @import "./base/blocks/main-nav.less";
 @import "./base/blocks/nav-list.less";
-@import "./base/blocks/hero.less";
 @import "./base/blocks/button.less";
-@import "./base/blocks/programs.less";
 @import "./base/blocks/program-card.less";
+@import "./base/blocks/hero.less";
 @import "./base/blocks/card-descr.less";
 @import "./base/blocks/second-title.less";
-@import "./base/blocks/it-works.less";
-@import "./base/blocks/example.less";
+@import "./base/blocks/programs.less";
 @import "./base/blocks/slider.less";
-@import "./base/blocks/invite.less";
-@import "./base/blocks/footer.less";
 @import "./base/blocks/social.less";
 @import "./elements/inner-title.less";
 @import "./elements/inner-text.less";
-@import "./elements/form-page.less";
+@import "./base/blocks/it-works.less";
+@import "./base/blocks/example.less";
 @import "./elements/text-input.less";
+@import "./base/blocks/invite.less";
+@import "./base/blocks/main-footer.less";
+@import "./elements/radio.less";
+@import "./elements/form-page.less";
+@import "./elements/special-title.less";
 @import "./elements/form.less";
 @import "./elements/group-name.less";
-@import "./elements/radio.less";
+@import "./elements/checkbox.less";
 @import "./elements/group-program.less";
-@import "./elements/special-title.less";
+@import "./elements/text-area.less";
 @import "./elements/group-contact.less";
 @import "./elements/group-comment.less";
-@import "./elements/text-area.less";
 @import "./elements/group-add.less";
-@import "./elements/checkbox.less";
+
+
 
