--- a/source/less/base/blocks/hero.less
+++ b/source/less/base/blocks/hero.less
@@ -27,6 +27,11 @@
       background-size: cover;
       right: 0;
       top: -143px;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/hero-desktop@2x.jpg");
+        background-size: 1338px auto;
+      }
     }
   }
 
