--- a/source/less/style.less
+++ b/source/less/style.less
@@ -33,6 +33,7 @@
 @import "./elements/group-contact.less";
 @import "./elements/group-comment.less";
 @import "./elements/group-add.less";
+@import "./elements/card.less";
 
 
 
