--- a/source/less/base/blocks/nav-list.less
+++ b/source/less/base/blocks/nav-list.less
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   border-top: 1px solid #e6e6e6;
-  
+
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -13,7 +13,7 @@
   }
 
   @media (min-width: @tablet-width) {
-   max-width: 600px;
+    max-width: 600px;
   }
 }
 
@@ -43,12 +43,19 @@
 .nav-list__link--color {
   @media (min-width: @tablet-width) {
     border-bottom: 2px solid #68b738;
- }
+  }
+}
 
- @media (min-width: @desktop-width) {
-  border-color: @color-light;
- }
+.nav-list__link--color-index {
+  @media (min-width: @desktop-width) {
+    border-color: @color-light;
+  }
+}
 
+.nav-list__link--not-index {
+  @media (min-width: @tablet-width) {
+    color: #000000;
+  }
 }
 
 .nav-list__item {
