--- a/source/less/base/blocks/main-nav.less
+++ b/source/less/base/blocks/main-nav.less
@@ -48,7 +48,7 @@
   background: url("../img/nav-button-mobile.svg") no-repeat center center;
 }
 
-.main-nav__list {
+.main-nav__list--js {
   @media (max-width: @mobile-width-only) {
     position: absolute;
     top: 0;
