--- a/source/less/elements/card.less
+++ b/source/less/elements/card.less
@@ -1,13 +1,213 @@
-.card {}
+.card {
+  padding: 22px 22px 23px;
+  border: 1px solid #ebebeb;
+  position: relative;
+  min-width: 320px;
 
-.card__image-block {}
+  @media (min-width: @tablet-width) {
+    padding: 243px 39px 37px;
+    background-color: @color-dark;
+    border: none;
 
-.card__image {}
+    @media (min-width: @desktop-width) {
+      padding: 254px 37px 40px 39px;
+      min-width: 245px;
+    }
 
-.card__title {}
 
-.card__list {}
+    &::before {
+      content: "";
+      height: 86px;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: @color-light;
+    }
+  }
+}
 
-.card__line {}
+.card__image-block {
+  position: absolute;
+  top: 27px;
+  left: 0;
+  width: 50%;
+  height: 111px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 18px;
 
-.card__term {}
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 210px;
+    top: 14px;
+    padding-left: 0;
+  }
+}
+
+.card__text-block {
+  width: 50%;
+  margin-left: auto;
+  margin-bottom: 18px;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    margin: 0 0 32px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 0 34px;
+  }
+}
+
+.card__title {
+  .font-basic();
+  font-size: 16px;
+  line-height: 20px;
+  color: #222222;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  max-width: 88px;
+  margin-bottom: 16px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto 19px;
+    display: block;
+    text-align: center;
+    max-width: 131px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    line-height: 21px;
+    margin: 0 auto 24px;
+  }
+}
+
+.card__list {
+  margin: 0;
+}
+
+.card__line {
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: 1px solid #cdcdcd;
+    margin-bottom: 8px;
+    padding-bottom: 7px;
+  }
+}
+
+.card__term {
+  .font-descr();
+  font-size: 12px;
+  line-height: 16px;
+  color: #444444;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+  }
+}
+
+.card__button {
+  font-size: 16px;
+  line-height: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 11px;
+  }
+}
+
+.card--last {
+  padding: 78px 24px 25px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  border: 1px solid @color-dark;
+  background-color: @color-light;
+
+  @media (min-width: @tablet-width) {
+    padding: 249px 37px 22px;
+  }
+}
+
+.card--last::before {
+  @media (min-width: @tablet-width) {
+    content: "";
+    border: 1px solid @color-light;
+    width: 101%;
+    top: -1px;
+    left: -1px;
+    border-bottom: 1px solid @color-dark;
+  }
+}
+
+
+.card__title--last {
+  max-width: 100%;
+  margin: 0;
+  margin-bottom: 11px;
+
+  @media (min-width: @tablet-width) {
+    max-width: 55%;
+    margin-bottom: 23px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 100%;
+    margin-bottom: 26px;
+  }
+}
+
+.card__term--last {
+  margin: 0;
+  margin-bottom: 21px;
+
+  @media (min-width: @tablet-width) {
+    max-width: 80%;
+    text-align: center;
+    margin-bottom: 87px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 100%;
+  }
+}
+
+.card--last::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-image: url("../img/catalog/plus.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  @media (min-width: @tablet-width) {
+    width: 60px;
+    height: 60px;
+    background-image: url("../img/catalog/plus-tablet.svg");
+    top: 139px;
+  }
+}
+
+.card__button--last {
+  .font-basic();
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #444444;
+  display: block;
+  padding: 10px 0;
+  background-color: @color-dark;
+  align-self: stretch;
+  text-align: center;
+}
+
